[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = "1.42.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid", "chrono"]}
config = "0.14.1"
chrono = "0.4.38"
uuid = {version = "1.11.0", features = ["v4"]}
env_logger = "0.11.5"
log = "0.4.22"
tracing = { version = "0.1.41", features = ["log"] }



[dev-dependencies]
reqwest = "0.12.9"
